--- a/src/main/webapp/jsp/error/error_404.html
+++ b/src/main/webapp/jsp/error/error_404.html
@@ -13,10 +13,10 @@ String basePath = request.getScheme()+"://"+request.getServerName()+":"+request.
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- STYLESHEETS --><!--[if lt IE 9]><script src="js/flot/excanvas.min.js"></script><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script><![endif]-->
-	<link rel="stylesheet" type="text/css" href="../css/cloud-admin.css" >
-	<link rel="stylesheet" type="text/css"  href="../css/responsive.css" >
+	<link rel="stylesheet" type="text/css" href="../../css/cloud-admin.css" >
+	<link rel="stylesheet" type="text/css"  href="../../css/responsive.css" >
 	
-	<link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>	
 	<!-- PAGE -->
@@ -57,23 +57,23 @@ String basePath = request.getScheme()+"://"+request.getServerName()+":"+request.
 	<!-- JAVASCRIPTS -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<!-- JQUERY -->
-	<script src="js/jquery/jquery-2.0.3.js"></script>
+	<script src="../../js/jquery/jquery-2.0.3.js"></script>
 	<!-- JQUERY UI-->
-	<script src="js/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
+	<script src="../../js/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
 	<!-- BOOTSTRAP -->
-	<script src="bootstrap-dist/js/bootstrap.js"></script>
+	<script src="../../bootstrap-dist/js/bootstrap.js"></script>
 	
 		
 	<!-- DATE RANGE PICKER -->
-	<script src="js/bootstrap-daterangepicker/moment.min.js"></script>
+	<script src="../../js/bootstrap-daterangepicker/moment.min.js"></script>
 	
-	<script src="js/bootstrap-daterangepicker/daterangepicker.min.js"></script>
+	<script src="../../js/bootstrap-daterangepicker/daterangepicker.min.js"></script>
 	<!-- SLIMSCROLL -->
-	<script type="text/javascript" src="js/jQuery-slimScroll-1.3.0/jquery.slimscroll.min.js"></script><script type="text/javascript" src="js/jQuery-slimScroll-1.3.0/slimScrollHorizontal.min.js"></script>
+	<script type="text/javascript" src="../../js/jQuery-slimScroll-1.3.0/jquery.slimscroll.min.js"></script><script type="text/javascript" src="../../js/jQuery-slimScroll-1.3.0/slimScrollHorizontal.min.js"></script>
 	<!-- COOKIE -->
-	<script type="text/javascript" src="js/jQuery-Cookie/jquery.cookie.min.js"></script>
+	<script type="text/javascript" src="../../js/jQuery-Cookie/jquery.cookie.min.js"></script>
 	<!-- CUSTOM SCRIPT -->
-	<script src="js/script.js"></script>
+	<script src="../../js/script.js"></script>
 	<script>
 		jQuery(document).ready(function() {		
 			App.setPage("widgets_box");  //Set current page
